# YaHandbook

./: .gitignore  README.md  pyproject.toml
yahandbook/chapter4/lesson4_1/: less_A.py  less_B.py  less_C.py  less_D.py  less_E.py  less_F.py  less_G.py  less_H.py  less_I.py
yahandbook/chapter4/lesson4_2/: less_A.py  less_B.py  less_C.py
yahandbook/chapter5/lesson5_1/: constants.py  less_A.py  less_B.py  less_C.py  less_D.py  less_E.py  less_E2.py  less_F.py  less_F2.py  main.py
